# pubsub

./: LICENSE
src/: broker.hpp  callback_funcs.hpp  callback_funcs_base.hpp  callback_funcs_of_topics.hpp  client.hpp  default_serializer.hpp  pubsub.hpp  serializer_holder.hpp  singleton.hpp  topic_func_pair_list.hpp
test/: CMakeLists.txt
test/src/: sample.cpp
